--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -580,6 +580,7 @@
       </activation>
       <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
       <properties>
+        <errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
         <javac.version>9+181-r4173-1</javac.version>
       </properties>
       <dependencies>
